media/boom/css/boom.tags.less
.b-tags {
	&-tree {
		margin: 0;
		width: 100%;
		overflow: none;
		border: 1px solid #D3D3D3;
		border-width: 0 1px 1px 0;

		ul {
			margin: 0 0 0 1.4em;
			padding: 0;
		}

		li {
			list-style: none;
			line-height: 1.1;
			background-position: 50% 50% !important;

			a {
				display: block;
				padding: .2em;
				border: 1px solid #fff;
				outline: none;
				line-height: 1.1;

				&:hover {
					color: #000;
				}

				.ui-state-active {
					border: 1px solid #fff;
					background: #fff;

					&:hover {
						color: #212121;
					}
				}
			}

			.ui-icon {
				float: left;
				cursor: default;
				border: 0;
				margin-right: 3px;
			}

			.ui-icon-placeholder {
				background: transparent !important;
				cursor: auto !important;
			}

			.ui-helper-right {
				float: right;
				cursor: pointer;
			}

			.b-tags-tree-hitarea {
				margin: 1px 0 0 1px;
				cursor: pointer;
			}

			.b-tags-tree-hover {
				background-color: #ddd;
			}
		}

		.ui-state-default {
			border-width: 1px 0 0 1px;
		}

		&-container {
			padding: 5px;
			width: 320px;
			overflow: auto;
		}
	}

	&-list {
		list-style: none;

		li {
			border-width: 0px;
			padding: 2px;
			margin: 5px;
			line-height: 30px;

			span {
				margin-left: 32px;

				&.active {
					margin-left: 2px;
				}
			}
		}
	}

	&-remove {
		display: none;
		float: left;
	}
}

.boom-tagmanager {
	.b-tags-tree-container {
		float: left;
	}

	.boom-tree-container {
		float: left;
	}
}

